--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
 h1,
 h3 {
   font-size: 2em;
-  font-family: Montserrat, sans-serif;
+  font-family:'Times New Roman', Times, serif;
   font-weight: 900;
 }
 
